# lyra

./: .gitignore  CHANGELOG.md  FORMULA.md  LICENSE  LYRA_PRODUCT_VISION.md  README.md  REVIEW_PROMPT.md  SPEC_v0_2.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: evaluator.py
bridge/: __init__.py  bridge.py  coherence_proxy.py
docs/: six-rungs.md
docs/internal/: LYRA_PLUGIN_FRAMEWORK.md  LYRA_PLUGIN_VISION.md
experiments/bridge/: PROTOCOL.md
lyra/: __init__.py  coherence.py  drift.py  generation.py  loop.py
lyra-extension/: content.js  interceptor.js  lyra_math.js  manifest.json
protocols/: HERE_v3.md  LYRA_SEED_v6_TWO_SIDES.md
site/: index.html
src/api/: main.py
src/plugins/: anthropic_mcp.py
tests/: test_coherence.py  test_drift.py
