[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra-ai"
version = "0.2.0"
description = "Coherence-guided inference for language models. The observer effect for transformers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Morgan Sage", email = "hello@awaken.fyi" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
bridge = [
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://awaken.fyi"
"Repository" = "https://github.com/awakenfyi/lyra"
"Bug Tracker" = "https://github.com/awakenfyi/lyra/issues"

[tool.setuptools.packages.find]
include = ["lyra*", "bridge*", "benchmarks*"]
